@@ -3,6 +3,7 @@
 	  - Added an entry about 4.0.0. (not released yet)
 	* mask.[ch], tests/test_mask.c:
 	  - Run length calculation has been slightly improved.
+	  - Reduce malloc calls.
 
 2014.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	* qrenc.c:
